template/argocd-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  #  namespace: argocd
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    #    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
#  - host: argocd.chant.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chant
            port:
              number: 80
#              name: https
#  tls:
#  - hosts:
#    - argocd.chant.com
#    secretName: root-secret # as expected by argocd-server
