template/ing-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-tls
  annotations:
    cert-manager.io/cluster-issuer: my-ca-issuer
spec:
  ingressClassName: public
  rules:
  - host: argocd.chant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls: #  placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - argocd.chant.com
    secretName: myingress-cert # < cert-manager will store the created certificate in this secret.
